--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,23 @@
     <string name="preset_button_click_label">Change active preset</string>
     <string name="unsaved_preset_description">Unsaved preset</string>
     <string name="playing_preset_description">Playing preset</string>
+
+    <string name="play_button_description">Play SoundAura audio</string>
+    <string name="pause_button_description">Pause SoundAura audio</string>
+
+    <string name="play_pause_button_long_click_description">Set auto stop timer</string>
+    <string name="set_stop_timer_dialog_title">"Set auto stop timer</string>
+    <string name="set_stop_timer_dialog_description">
+        Set the duration after which playback will automatically be stopped.
+        You can change the amounts using the up or down buttons, or by
+        dragging the amount up or down.</string>
+
+    <string name="stop_timer_text">ing in</string>
+    <string name="stop_timer_click_label">Cancel auto stop timer</string>
+    <string name="cancel_stop_timer_dialog_title">Confirm timer cancellation</string>
+    <string name="cancel_stop_timer_dialog_text">
+        Are you sure you would like to cancel the auto stop timer?</string>
+
     <string name="preset_selector_title">Select a preset</string>
     <string name="empty_preset_list_message">You don\'t have any saved presets.
         Tap the add button below to save the current sound mix as a preset.</string>
@@ -70,11 +87,9 @@
     <string name="confirm_delete_preset_title">Delete %1$s?</string>
     <string name="confirm_delete_preset_message">
         This will not remove the tracks in the preset from your library.</string>
-
     <string name="preset_cannot_be_empty_warning_message">
         There are no active tracks to add to the preset.
         Tap a track\'s add button first.</string>
-
     <string name="add_preset_button_description">Create new preset</string>
     <string name="create_new_preset_dialog_title">Enter new preset name</string>
     <string name="preset_name_cannot_be_blank_error_message">
@@ -90,8 +105,6 @@
 
     <string name="play">Play</string>
     <string name="pause">Pause</string>
-    <string name="play_button_description">Play SoundAura audio</string>
-    <string name="pause_button_description">Pause SoundAura audio</string>
     <string name="playing">Playing</string>
     <string name="paused">Paused</string>
     <string name="stopped">Stopped</string>
