--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,11 +103,14 @@
     <string name="unsaved_preset_changes_warning_save_first_option">Save changes first</string>
     <string name="unsaved_preset_changes_warning_load_anyways_option">Load anyways</string>
 
-    <string name="play">Play</string>
-    <string name="pause">Pause</string>
     <string name="playing">Playing</string>
     <string name="paused">Paused</string>
     <string name="stopped">Stopped</string>
+    <string name="stop_timer_description">Stopping in %1$s</string>
+    <string name="cancel_stop_timer_action">Cancel stop timer</string>
+
+    <string name="play">Play</string>
+    <string name="pause">Pause</string>
     <string name="close">Close</string>
     <string name="checked">Checked</string>
     <string name="unchecked">Unchecked</string>
