--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,7 +132,7 @@
     <string name="ok" tools:ignore="Typos,ButtonCase">Ok</string>
     <string name="cancel">Cancel</string>
 
-    <string name="show_active_playlists_first">Show active tracks/playlists first</string>
+    <string name="show_active_playlists_first">Show active first</string>
     <string name="name_ascending">Name ascending</string>
     <string name="name_descending">Name descending</string>
     <string name="order_added">Order added</string>
