--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,13 @@
     <string name="confirm_remove_message">This will remove the track from your library
         and any presets it is a part of, but will not delete the file from your device.</string>
 
+    <string name="create_playlist_title">Create playlist</string>
+    <!-- playlist_options_title doesn't have a string arg for the
+         playlist's name so that a marquee text can be used instead -->
+    <string name="playlist_options_title"> options</string>
+    <string name="playlist_shuffle_switch_title">Shuffle</string>
+    <string name="playlist_track_handle_description">Reorder track %1$s</string>
+
     <string name="add_local_files_button_description">Add tracks or playlists from local files</string>
     <string name="add_local_files_dialog_title">Confirm added file(s)</string>
     <string name="add_local_files_as_playlist_or_tracks_question">
