Move loose ui related files to ui package

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="create_playlist_title">Create playlist</string>
     <!-- playlist_options_title doesn't have a string arg for the
          playlist's name so that a marquee text can be used instead -->
-    <string name="playlist_options_title"> options</string>
+    <string name="playlist_options_title">\u0020options</string>
     <string name="playlist_shuffle_switch_title">Shuffle</string>
     <string name="playlist_track_handle_description">Reorder track %1$s</string>
 
