--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,10 +49,11 @@
     <string name="add_local_files_button_description">Add tracks or playlists from local files</string>
     <string name="add_local_files_dialog_title">Confirm added file(s)</string>
     <string name="add_local_files_as_playlist_or_tracks_question">
-        Would you like to add the files as individual tracks, or as a playlist?</string>
-    <string name="add_local_files_as_tracks_option">Individual tracks</string>
+        Add files as individual tracks, or as a playlist?</string>
+    <string name="add_local_files_individually_option">Individually</string>
     <string name="add_local_files_as_playlist_option">Playlist</string>
     <string name="add_local_files_as_tracks_dialog_title">Confirm track name(s)</string>
+    <string name="add_local_files_as_playlist_dialog_title">Confirm playlist name</string>
 
     <string name="add_multiple_tracks_name_error_message">The tracks must have unique, non-blank names</string>
     <string name="add_playlist_duplicate_name_error_message">The name is already in use</string>
