--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,13 +40,17 @@
 
     <string name="create_playlist_title">Create playlist</string>
     <string name="playlist_options_title">Playlist options</string>
-    <!-- playlist_options_dialog_title doesn't have a string arg for the
-         playlist's name so that a marquee text can be used instead -->
-    <string name="playlist_options_dialog_title">\u0020options</string>
+    <string name="playlist_track_count_description">%1$s track(s)</string>
     <string name="playlist_shuffle_switch_title">Shuffle</string>
     <string name="playlist_shuffle_switch_description">Toggle shuffle on/off</string>
     <string name="playlist_track_handle_description">Reorder track %1$s</string>
     <string name="playlist_track_delete_description">Remove %1$s</string>
+    <string name="playlist_add_tracks_button_description">Add tracks to %1$s</string>
+
+    <string name="file_chooser_no_valid_tracks_error_message">
+        Choose at least one file that is not already in the playlist</string>
+    <string name="file_chooser_invalid_tracks_warning_message">
+        $1%d of the files were already in the playlist</string>
 
     <string name="add_local_files_button_description">Add tracks or playlists from local files</string>
     <string name="add_local_files_as_playlist_or_tracks_title">Add local file(s)</string>
