--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,10 +77,10 @@
         The playlist could not be added because the app is at Android\'s
         file permission limit of %2$d. You must remove some tracks or
         playlists in order to add any more.</string>
-    <string name="cant_add_playlist_tracks_warning">
-        The tracks could not be added to the playlist because the app is at
-        Android\'s file permission limit of %2$d. You must remove some tracks
-        or playlists in order to add any more.
+    <string name="cant_modify_playlist_tracks_warning">
+        The playlist\'s track list could not be modified because the app is
+        at Android\'s file permission limit of %2$d. You must remove some
+        tracks or playlists in order to add any more.
     </string>
 
     <string name="configure_playlist_dialog_title">Configure playlist options</string>
