--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,9 +21,9 @@
     <string name="search">Search</string>
     <string name="sort_options_description">Open sorting options</string>
 
-    <string name="empty_library_message">Your library is empty\n\nTap the add button below to add
-        local files to your library\n\nTap the plus symbol next to an added track or playlist to
-        make it part of the sound mix when playback is started</string>
+    <string name="empty_library_message">Your library is empty.\n\nTap the add button below to add
+        local files to your library.\n\nTap the plus symbol next to an added track or playlist to
+        make it part of the sound mix when playback is started.</string>
     <string name="no_search_results_message">No tracks/playlists match the query.</string>
     <string name="set_playlist_active_description">Add %1$s to sound mix</string>
     <string name="set_playlist_inactive_description">Remove %1$s from sound mix</string>
