--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,7 +159,7 @@
     <string name="settings">Settings</string>
 
     <string name="display">Display</string>
-    <string name="app_theme">App Theme</string>
+    <string name="app_light_dark_mode">Light/Dark Mode</string>
     <string name="match_system_theme">Match system</string>
     <string name="light_theme">Light</string>
     <string name="dark_theme">Dark</string>
